--- a/public/events.html
+++ b/public/events.html
@@ -709,10 +709,7 @@
         <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
         <span>Лидерборд</span>
     </a>
-    <a href="/menu#quests" class="footer-item">
-        <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
-        <span>Задания</span>
-    </a>
+    <a href="/quests" id="nav-quests" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div><span>Задания</span></a>
     <a href="/menu" class="footer-item">
         <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
         <span>Главная</span>
