--- a/public/menu.html
+++ b/public/menu.html
@@ -66,7 +66,7 @@
       <div class="stats-block">
         <div class="social-stats-wrapper">
           <div class="social-links">
-            <a href="#" onclick="Telegram.WebApp.openTelegramLink('https://t.me/hatelovettv'); return false;" class="stats-link">
+            <a href="#" onclick="Telegram.WebApp.openTelegramLink('https://t.me/hatelove_ttv'); return false;" class="stats-link">
                 <div class="social-icon-wrapper" id="telegram-icon"><i class="fa-brands fa-telegram"></i></div>
             </a>
             <a href="#" onclick="Telegram.WebApp.openLink('https://www.twitch.tv/hatelove_ttv'); return false;" class="stats-link">
