--- a/public/profile.html
+++ b/public/profile.html
@@ -518,7 +518,9 @@
 
     <main class="main-content">
         <div class="page-header">
-            <a href="/menu" class="back-button"><i class="fa-solid fa-arrow-left"></i> ГЛАВНАЯ</a>
+    <a href="#" id="header-back-btn" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Назад
+    </a>
             <h1 id="profileName" class="page-header-title">Профиль</h1>
             <div style="width: 50px;"></div> 
         </div>
@@ -916,8 +918,32 @@ try {
         // ------------------------------------------------------------------
 
         // Настройка кнопки Назад
-        tg.BackButton.show();
-        tg.BackButton.onClick(() => tg.close());
+        function goBack() {
+        // Проверяем, есть ли история браузера, чтобы вернуться назад
+        // window.history.length > 1 означает, что мы не на первой странице сессии
+        if (window.history.length > 1 && document.referrer) {
+            window.history.back();
+        } else {
+            // Если истории нет (открыли по прямой ссылке), идем принудительно в меню
+            // Замени '/menu' на ссылку твоего главного меню, если она отличается
+            window.location.href = '/menu';
+        }
+    }
+
+    // 1. Привязываем логику к нашей HTML кнопке в шапке
+    const headerBackBtn = document.getElementById('header-back-btn');
+    if (headerBackBtn) {
+        headerBackBtn.addEventListener('click', (e) => {
+            e.preventDefault(); // Отменяем стандартный переход по ссылке
+            goBack();
+        });
+    }
+
+    // 2. Настраиваем нативную кнопку Telegram (которая в заголовке самого мессенджера)
+    tg.BackButton.show();
+    tg.BackButton.onClick(() => {
+        goBack();
+    });
 
         // Если есть кнопка "Домой" в HTML
         const homeBtn = document.getElementById('home-btn');
