--- a/public/auction.html
+++ b/public/auction.html
@@ -20,9 +20,9 @@
 
         <div class="container">
             <div class="new-header-container">
-                <a href="/menu" class="header-back-button">
-                    <i class="fa-solid fa-chevron-left"></i> ГЛАВНАЯ
-                </a>
+    <a href="#" id="header-back-btn" class="header-back-button">
+        <i class="fa-solid fa-chevron-left"></i> Назад
+    </a>
                 <div class="page-header">
                     <h2 class="page-title">АУКЦИОН</h2>
                 </div>
