--- a/public/cs_roulette.html
+++ b/public/cs_roulette.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>CS:GO Case Opening</title>
+    <title>HATElove twitch secret</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -376,7 +376,7 @@
 </head>
 <body>
 
-    <div id="loading-screen">LOADING...</div>
+    <div id="loading-screen">ЗАГРУЗКА...</div>
     <div id="bg-layer" class="bg-agent"></div>
 
     <div id="screen-input" class="screen active">
