--- a/public/cs_roulette.html
+++ b/public/cs_roulette.html
@@ -397,7 +397,7 @@
                 <div id="boost-twitch" class="boost-item" onclick="openTwitch()">
                     <div class="boost-check-mini"><i class="fa-solid fa-check"></i></div>
                     <div class="boost-icon"><i class="fa-brands fa-twitch"></i></div>
-                    <div class="boost-label">Twitch<br>Подписка</div>
+                    <div class="boost-label">Twitch<br>Фоллов</div>
                     <div class="boost-percent" id="val-twitch">...</div>
                 </div>
 
