--- a/public/cs_roulette.html
+++ b/public/cs_roulette.html
@@ -568,9 +568,7 @@
         </button>
 
     </div>
-</div>
-
-    <div id="hashtag-modal" class="modal">
+</div> </div> <div id="hashtag-modal" class="modal">
     <div class="modal-box">
         <div style="margin-bottom: 15px;">
             <i class="fa-solid fa-robot" style="font-size: 40px; color: #ffd700;"></i>
