--- a/public/cs_roulette.html
+++ b/public/cs_roulette.html
@@ -53,6 +53,9 @@
             background-position: center top; 
             background-repeat: no-repeat;
             z-index: -1;
+            image-rendering: -webkit-optimize-contrast; /* Для Safari/Chrome */
+            image-rendering: crisp-edges;
+            image-rendering: pixelated; /* Иногда помогает для арта, но может дать "зерно" */
         }
         
         .bg-agent { background-image: url('https://i.postimg.cc/P5KJKbcQ/kartinka-bez-knopki.png'); }
