--- a/public/cs_roulette.html
+++ b/public/cs_roulette.html
@@ -806,6 +806,8 @@
     const tg = window.Telegram.WebApp;
     tg.expand();
     const initData = tg.initData;
+    let startParam = null; // <--- ДОБАВИТЬ ЭТУ СТРОКУ
+    
 
     // --- ПЕРЕМЕННЫЕ ---
     let itemsCache = [];
@@ -823,7 +825,7 @@
 
     // --- ИНИЦИАЛИЗАЦИЯ (С RELOAD) ---
     async function init() {
-        const startParam = tg.initDataUnsafe.start_param; // Токен из ссылки
+        startParam = tg.initDataUnsafe.start_param; // Токен из ссылки
         
         // Если есть ссылка - сразу показываем шторку проверки
         if (startParam) {
@@ -899,6 +901,22 @@
                 document.getElementById('screen-action').classList.add('active');
             }
         }
+    }
+
+    // --- ОТРИСОВКА ГАЛОЧЕК ---
+    function renderBoostChecks(data) {
+        if(!data) return;
+        const set = (id, active) => {
+            const el = document.getElementById(id);
+            if(el) {
+                if(active) el.classList.add('active');
+                else el.classList.remove('active');
+            }
+        };
+        // ID элементов из твоего HTML
+        set('boost-twitch', data.twitch);
+        set('boost-tg', data.tg);
+        set('boost-hash', data.hashtag);
     }
 
     // --- ЛОГИКА БУСТОВ И ПРОВЕРКИ ---
