--- a/public/profile.html
+++ b/public/profile.html
@@ -570,19 +570,21 @@
         .dash-btn.has-warning { border-color: rgba(255, 59, 48, 0.4); }
 
         /* --- ИСПРАВЛЕНИЕ: МОДАЛЬНОЕ ОКНО (1 в 1 как приложение) --- */
+        /* --- ФИКС МОДАЛЬНОГО ОКНА И ВИДИМОСТИ --- */
         .custom-modal {
             position: fixed;
             top: 0; left: 0; right: 0; bottom: 0;
             width: 100%; height: 100%;
-            /* ВАЖНО: Используем переменные фона приложения, чтобы не было черного экрана */
-            background-color: var(--bg-color); 
-            background-image: var(--bg-gradient);
+            /* Темный фон с размытием, чтобы перекрыть основной контент */
+            background: rgba(0, 0, 0, 0.95);
+            backdrop-filter: blur(5px);
             z-index: 99999;
             display: flex;
             flex-direction: column;
             opacity: 0;
             pointer-events: none;
             transition: opacity 0.2s ease;
+            /* Отступ сверху для Telegram Safe Area */
             padding-top: var(--tg-viewport-stable-height, 0);
         }
 
@@ -591,45 +593,48 @@
             pointer-events: auto;
         }
 
-        /* Убираем лишние фоны у контейнера, чтобы карточки "дышали" */
         .modal-card {
-            background: transparent; 
             width: 100%;
             height: 100%;
-            border: none;
             display: flex;
             flex-direction: column;
+            background: transparent; /* Фон берется от custom-modal */
         }
 
         .modal-header {
             padding: 15px 20px;
-            /* Легкий фон для шапки, чтобы отделить её */
-            background: rgba(255, 255, 255, 0.05); 
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(28, 28, 30, 1); /* Непрозрачный фон для шапки */
+            border-bottom: 1px solid rgba(255, 255, 255, 0.15);
             display: flex; 
             justify-content: space-between; 
             align-items: center;
-            flex-shrink: 0;
+            flex-shrink: 0; /* Шапка не сжимается */
+            min-height: 60px;
         }
 
+        /* КОНТЕЙНЕР СПИСКА */
         .modal-body {
             padding: 15px;
-            overflow-y: auto;
-            flex-grow: 1;
-            padding-bottom: 80px; /* Место для скролла */
+            overflow-y: auto; /* Прокрутка */
+            flex-grow: 1; /* Занимает все доступное место */
+            display: block; /* Гарантируем блочное отображение */
+            padding-bottom: 100px; /* Место снизу */
         }
 
-        /* --- ВАШИ СТАРЫЕ СТИЛИ КАРТОЧЕК (ВОССТАНОВЛЕНЫ) --- */
+        /* --- КАРТОЧКА НАГРАДЫ (ЯРЧЕ ДЛЯ ВИДИМОСТИ) --- */
         .reward-item {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            /* Чуть светлее фон, чтобы выделялся на черном */
+            background: #1c1c1e; 
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 12px;
             padding: 15px;
             margin-bottom: 12px;
-            position: relative;
             display: flex;
             flex-direction: column;
             gap: 10px;
+            /* Принудительный цвет текста */
+            color: #ffffff;
+            position: relative;
         }
 
         .reward-header {
@@ -637,26 +642,27 @@
             justify-content: space-between;
             align-items: center;
             font-size: 14px;
-            font-weight: 600;
+            font-weight: 700;
             color: #fff;
         }
 
         .reward-value {
-            color: var(--primary-color);
+            color: var(--primary-color, #34c759);
             font-weight: bold;
         }
 
         .reward-code-container {
-            background: rgba(0, 0, 0, 0.3);
-            padding: 10px;
+            background: #000; /* Черный фон для кода */
+            padding: 12px;
             border-radius: 8px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             font-family: monospace;
             font-size: 16px;
-            border: 1px dashed rgba(255, 255, 255, 0.2);
+            border: 1px dashed rgba(255, 255, 255, 0.3);
             cursor: pointer;
+            color: #fff;
         }
 
         .reward-actions {
@@ -677,25 +683,16 @@
             align-items: center;
             justify-content: center;
             gap: 6px;
-            transition: background 0.2s;
-        }
-
-        .btn-copy-action {
-            background: rgba(255, 255, 255, 0.1);
             color: #fff;
         }
-
-        .btn-help-action {
-            background: rgba(52, 199, 89, 0.15);
-            color: var(--primary-color);
-        }
+        .btn-copy-action { background: rgba(255, 255, 255, 0.15); }
+        .btn-help-action { background: rgba(52, 199, 89, 0.2); color: #34c759; }
 
         .expiry-info {
             font-size: 10px;
             text-align: center;
+            color: #ff3b30;
             margin-top: 2px;
-            color: var(--danger-color);
-            font-weight: bold;
         }
     </style>
 </head>
