--- a/public/profile.html
+++ b/public/profile.html
@@ -590,8 +590,8 @@
             <div class="dash-btn" id="btn-open-promocodes">
                 <div class="badge-alert" id="promo-alert-badge">Сгорают скоро!</div>
                 <i class="fa-solid fa-ticket"></i>
-                <div class="title">PROMOCODE SHOP</div>
-                <div class="info">Промокоды для монеток</div>
+                <div class="title">Промокоды</div>
+                <div class="info">Промокоды для получения монеток</div>
                 <div class="info" id="promo-btn-info">Загрузка...</div>
             </div>
 
@@ -606,7 +606,7 @@
     <div class="custom-modal" id="modal-promocodes">
         <div class="modal-card">
             <div class="modal-header">
-                <div class="modal-title"><i class="fa-solid fa-gift"></i> PROMOCODE SHOP</div>
+                <div class="modal-title"><i class="fa-solid fa-gift"></i> Твои промокоды</div>
                 <button class="modal-close" id="close-modal-promocodes"><i class="fa-solid fa-xmark"></i></button>
             </div>
             
